// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section snapshots should match snapshot for collapsible section when collapsed 1`] = `
<div>
  <div
    class="formContainer"
  >
    <div
      class="accordionWrapper"
    >
      <div
        data-testid="accordion"
      >
        <div
          data-testid="collapsible-accordion-item"
        >
          <button
            aria-expanded="false"
            data-testid="accordion-button"
            type="button"
          >
            SECTION_TITLE
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section snapshots should match snapshot for collapsible section when expanded 1`] = `
<div>
  <div
    class="formContainer"
  >
    <div
      class="accordionWrapper"
    >
      <div
        data-testid="accordion"
      >
        <div
          data-testid="collapsible-accordion-item"
        >
          <button
            aria-expanded="true"
            data-testid="accordion-button"
            type="button"
          >
            SECTION_TITLE
          </button>
          <div>
            <div
              class="sectionContent"
              data-testid="section-content"
            >
              <div>
                <div
                  data-testid="address-component"
                >
                  Address
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section snapshots should match snapshot for non-collapsible section 1`] = `
<div>
  <div
    class="formContainer"
  >
    <div
      class="headerTile"
      data-testid="section-header-tile"
    >
      <span
        class="sectionTitle"
      >
        SECTION_TITLE
      </span>
    </div>
    <div
      class="sectionContent"
      data-testid="section-content"
    >
      <div>
        <div
          data-testid="address-component"
        >
          Address
        </div>
      </div>
    </div>
  </div>
</div>
`;
